objects/D_partement__c.object
<CustomObject>
    <description>Cet objet liste le code Département avec les libellés correspondants</description>
    <fields>
        <fullName>Code_Region__c</fullName>
        <label>Code Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_d_partement__c</fullName>
        <externalId>true</externalId>
        <label>Code département</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>R_gion__c</fullName>
        <label>Région</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Département</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de Département</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Départements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>